--- a/index.html
+++ b/index.html
@@ -390,19 +390,19 @@
       <h2>Our Work</h2>
       <div class="gallery">
         <div class="gallery-item">
-          <img src="image1.jpg" alt="Permanent LED Installation, warm white outline at night">
+          <img src="image1.png" alt="Permanent LED Installation, warm white outline at night">
           <div class="gallery-overlay">
             <p>Permanent Warm White LED Installation</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="image2.jpg" alt="Permanent LED lighting, blue and red">
+          <img src="image2.png" alt="Permanent LED lighting, blue and red">
           <div class="gallery-overlay">
             <p>Blue & Red Color LED Lighting</p>
           </div>
         </div>
         <div class="gallery-item">
-          <img src="image3.jpg" alt="Permanent LED lighting, red and white">
+          <img src="image3.png" alt="Permanent LED lighting, red and white">
           <div class="gallery-overlay">
             <p>Red & White Holiday LED Lighting</p>
           </div>
