--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Brighter Arizona LED - Professional Lighting Solutions</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #121212;
@@ -19,7 +14,6 @@
       line-height: 1.6;
       overflow-x: hidden;
     }
-
     header {
       background: linear-gradient(135deg, #000, #1a1a1a);
       color: white;
@@ -28,7 +22,6 @@
       position: relative;
       overflow: hidden;
     }
-
     header::before {
       content: '';
       position: absolute;
@@ -36,20 +29,17 @@
       background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="2" fill="rgba(255,255,255,0.1)" opacity="0.3"/><circle cx="20" cy="20" r="1" fill="rgba(255,255,255,0.1)" opacity="0.5"/><circle cx="80" cy="30" r="1.5" fill="rgba(255,255,255,0.1)" opacity="0.4"/></svg>');
       animation: sparkle 5s ease-in-out infinite;
     }
-
     @keyframes sparkle {
       0%, 100% { opacity: 0.3; }
       50% { opacity: 0.8; }
     }
-
     header h1 {
       font-size: 3rem;
       margin-bottom: 0.5rem;
       position: relative;
       z-index: 1;
-      text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
     }
-
     header p {
       font-size: 1.3rem;
       opacity: 0.95;
@@ -57,17 +47,15 @@
       position: relative;
       z-index: 1;
     }
-
     nav {
-      background: rgba(30, 30, 30, 0.9);
+      background: rgba(30,30,30,0.9);
       backdrop-filter: blur(10px);
       padding: 1rem;
       position: sticky;
       top: 0;
       z-index: 1000;
-      box-shadow: 0 2px 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 2px 15px rgba(0,0,0,0.2);
     }
-
     nav ul {
       list-style: none;
       display: flex;
@@ -75,7 +63,6 @@
       flex-wrap: wrap;
       gap: 1.5rem;
     }
-
     nav a {
       text-decoration: none;
       color: #ddd;
@@ -89,7 +76,6 @@
       backface-visibility: hidden;
       transform: translateZ(0);
     }
-
     nav a::before {
       content: '';
       position: absolute;
@@ -101,38 +87,32 @@
       transition: left 0.4s ease-in-out;
       pointer-events: none;
     }
-
     nav a:hover {
       background: #444;
       color: #fff;
       box-shadow: 0 5px 15px rgba(0,0,0,0.4);
       transform: translateY(-2px);
     }
-
     nav a:hover::before {
       left: 100%;
     }
-
     main {
       max-width: 1100px;
       margin: 0 auto;
       padding: 2rem 1rem;
     }
-
     section {
       margin-bottom: 4rem;
       padding: 3rem 2rem;
       background: #1e1e1e;
       border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
     }
-
     h2 {
       font-size: 2.2rem;
       margin-bottom: 1.5rem;
       text-align: center;
     }
-
     .about-content {
       text-align: center;
       font-size: 1.2rem;
@@ -140,13 +120,11 @@
       margin: 0 auto;
       color: #ccc;
     }
-
     .services-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
       gap: 2rem;
     }
-
     .service-card {
       background: #292929;
       border-radius: 15px;
@@ -156,45 +134,37 @@
       border: 1px solid #333;
       transition: transform 0.3s;
     }
-
     .service-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 15px 30px rgba(0,0,0,0.5);
     }
-
     .service-card h3 {
       margin-bottom: 1rem;
       color: #fff;
     }
-
     .service-card p {
       color: #aaa;
     }
-
     .gallery {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 2rem;
     }
-
     .gallery-item {
       border-radius: 15px;
       overflow: hidden;
       box-shadow: 0 10px 30px rgba(0,0,0,0.2);
       position: relative;
     }
-
     .gallery-item img {
       width: 100%;
       height: 200px;
       object-fit: cover;
       transition: transform 0.3s ease;
     }
-
     .gallery-item:hover img {
       transform: scale(1.05);
     }
-
     .gallery-overlay {
       position: absolute;
       bottom: 0;
@@ -207,17 +177,94 @@
       opacity: 0;
       transition: opacity 0.3s ease;
     }
-
     .gallery-item:hover .gallery-overlay {
       opacity: 1;
     }
-
+    /* Reviews placeholder styles (not implemented here, but keep for future) */
     footer {
       text-align: center;
       padding: 2rem;
       background: #111;
       color: #aaa;
       margin-top: 4rem;
+    }
+
+    /* Contact Section Styling */
+    .contact-container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 3rem;
+      align-items: start;
+    }
+    @media (max-width: 768px) {
+      .contact-container {
+        grid-template-columns: 1fr;
+      }
+    }
+    .contact-info {
+      background: #292929;
+      padding: 2rem;
+      border-radius: 15px;
+      color: #ddd;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+      text-align: center;
+    }
+    .contact-info h3 {
+      margin-bottom: 1.5rem;
+      font-size: 1.8rem;
+    }
+    .contact-item {
+      font-size: 1.1rem;
+      margin-bottom: 1.2rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.8rem;
+      color: #bbb;
+    }
+    .contact-item i {
+      font-size: 1.4rem;
+      width: 30px;
+      color: #fff;
+    }
+    form {
+      background: #292929;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
+    }
+    form input, form textarea {
+      width: 100%;
+      padding: 1rem;
+      border-radius: 10px;
+      border: none;
+      margin-bottom: 1.5rem;
+      font-size: 1rem;
+      font-family: inherit;
+      background: #1e1e1e;
+      color: #eee;
+      resize: vertical;
+    }
+    form input::placeholder, form textarea::placeholder {
+      color: #999;
+    }
+    form textarea {
+      min-height: 120px;
+    }
+    form button {
+      background: #444;
+      color: white;
+      border: none;
+      padding: 1rem 2rem;
+      font-size: 1.1rem;
+      font-weight: 600;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+      width: 100%;
+    }
+    form button:hover {
+      background: #666;
     }
   </style>
 </head>
@@ -272,19 +319,19 @@
       <h2>Our Work</h2>
       <div class="gallery">
         <div class="gallery-item">
-          <img src="images/image1.png" alt="Warm white LED install">
+          <img src="images/image1.png" alt="Warm white LED install" />
           <div class="gallery-overlay">Permanent Warm White Installation</div>
         </div>
         <div class="gallery-item">
-          <img src="images/image2.png" alt="Blue and red LED lighting">
+          <img src="images/image2.png" alt="Blue and red LED lighting" />
           <div class="gallery-overlay">Blue & Red Lighting Setup</div>
         </div>
         <div class="gallery-item">
-          <img src="images/image3.png" alt="Holiday lighting with red and white LEDs">
+          <img src="images/image3.png" alt="Holiday lighting with red and white LEDs" />
           <div class="gallery-overlay">Holiday Red & White Lights</div>
         </div>
         <div class="gallery-item">
-          <img src="https://images.unsplash.com/photo-1583608205776-bfd35f0d9f83?auto=format&fit=crop&w=500&q=80" alt="Southwest style home">
+          <img src="https://images.unsplash.com/photo-1583608205776-bfd35f0d9f83?auto=format&fit=crop&w=500&q=80" alt="Southwest style home" />
           <div class="gallery-overlay">Southwest Style Enhancement</div>
         </div>
       </div>
@@ -293,10 +340,31 @@
     <section id="about">
       <h2>About Brighter Arizona LED</h2>
       <div class="about-content">
-        <p>Based in the heart of Arizona, Brighter Arizona LED is your premier destination for professional lighting solutions. We understand the unique architecture and climate challenges of the Southwest, and we've tailored our services to perfectly complement Arizona's distinctive home styles.</p><br>
+        <p>Based in the heart of Arizona, Brighter Arizona LED is your premier destination for professional lighting solutions. We understand the unique architecture and climate challenges of the Southwest, and we've tailored our services to perfectly complement Arizona's distinctive home styles.</p><br/>
         <p>Our team of certified lighting professionals brings years of experience and a commitment to excellence that ensures every project exceeds expectations. From permanent LED installations that enhance your home's natural beauty to spectacular holiday displays that create magical memories, we're here to illuminate your world.</p>
       </div>
     </section>
+
+    <section id="contact">
+      <h2>Contact Us</h2>
+      <div class="contact-container">
+        <div class="contact-info">
+          <h3>Get in Touch</h3>
+          <div class="contact-item"><i class="fas fa-phone"></i> (480) 389-6002</div>
+          <div class="contact-item"><i class="fas fa-envelope"></i> brighterarizonaled@gmail.com</div>
+          <div class="contact-item"><i class="fas fa-map-marker-alt"></i> Phoenix, Arizona</div>
+          <div class="contact-item"><i class="fas fa-clock"></i> Mon-Fri: 8AM - 6PM</div>
+        </div>
+        <form>
+          <input type="text" name="name" placeholder="Your Name *" required>
+          <input type="email" name="email" placeholder="Your Email *" required>
+          <input type="tel" name="phone" placeholder="Phone Number">
+          <textarea name="message" placeholder="Tell us about your project *" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
+    </section>
+
   </main>
 
   <footer>
