--- a/index.html
+++ b/index.html
@@ -2,401 +2,179 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Brighter Arizona LED - Professional Lighting Solutions</title>
-
-  <!-- 1. Google Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <!-- 2. Font Awesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Get a Quote | Brighter Arizona LED</title>
+  <link rel="stylesheet" href="style.css" />
   <style>
-    /* 3. Sunset background + global reset */
-    :root {
-      --sunset: linear-gradient(135deg, #ff7e5f 0%, #feb47b 50%, #4a3b89 100%);
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-    * { margin: 0; padding: 0; box-sizing: border-box; }
 
     body {
-      font-family: 'Inter', sans-serif;
-      background: var(--sunset) no-repeat center center fixed;
-      background-size: cover;
-      color: #fff;
-      line-height: 1.6;
-      text-shadow: 1px 1px 3px rgba(0,0,0,.4);
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f5f8fc;
+      color: #222;
     }
 
-    /* 4. Rest of your original styles — unchanged but pasted in full */
     header {
-      background: linear-gradient(135deg, #000, #1a1a1a);
-      color: white;
       text-align: center;
-      padding: 3rem 1rem;
-      position: relative;
-      overflow: hidden;
-    }
-    header::before {
-      content: '';
-      position: absolute;
-      top: 0; left: 0; bottom: 0; right: 0;
-      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="2" fill="rgba(255,255,255,0.1)" opacity="0.3"/><circle cx="20" cy="20" r="1" fill="rgba(255,255,255,0.1)" opacity="0.5"/><circle cx="80" cy="30" r="1.5" fill="rgba(255,255,255,0.1)" opacity="0.4"/></svg>');
-      animation: sparkle 5s ease-in-out infinite;
-    }
-    @keyframes sparkle {
-      0%, 100% { opacity: 0.3; }
-      50% { opacity: 0.8; }
-    }
-    header h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
-      position: relative;
-      z-index: 1;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.5);
-    }
-    header p {
-      font-size: 1.3rem;
-      opacity: 0.95;
-      font-weight: 300;
-      position: relative;
-      z-index: 1;
+      padding: 3rem 1rem 1rem;
     }
 
-    nav {
-      background: rgba(0,0,0,.25);
-      backdrop-filter: blur(6px);
-      border-radius: 12px;
-      margin: 1rem;
-      padding: .5rem 1.5rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 15px rgba(0,0,0,0.2);
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: bold;
+      color: #21244c;
     }
-    nav ul {
-      list-style: none;
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 1.5rem;
-    }
-    nav a {
-      text-decoration: none;
-      color: #ddd;
-      font-weight: 600;
+
+    header p {
       font-size: 1.1rem;
-      padding: 0.8rem 1.5rem;
-      border-radius: 25px;
-      transition: background 0.3s, color 0.3s, box-shadow 0.3s, transform 0.3s;
-      position: relative;
-      overflow: visible;
-      backface-visibility: hidden;
-      transform: translateZ(0);
-    }
-    nav a::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: -100%;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(90deg, transparent, rgba(255,255,255,0.1), transparent);
-      transition: left 0.4s ease-in-out;
-      pointer-events: none;
-    }
-    nav a:hover {
-      background: #444;
-      color: #fff;
-      box-shadow: 0 5px 15px rgba(0,0,0,0.4);
-      transform: translateY(-2px);
-    }
-    nav a:hover::before {
-      left: 100%;
+      margin-top: 0.5rem;
+      color: #555a77;
     }
 
     main {
-      max-width: 1100px;
-      margin: 0 auto;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 2rem 1rem;
     }
 
-    section {
-      margin-bottom: 4rem;
-      padding: 3rem 2rem;
-      background: rgba(30,30,30,.75);
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-    }
-
-    h2 {
-      font-size: 2.2rem;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
-
-    /* 5. Button glow (CTA style) */
-    .btn-primary,
-    form button {
-      background: #ff7e5f;
-      border: none;
-      border-radius: 8px;
-      padding: 1rem 2rem;
-      color: #fff;
-      font-weight: 600;
-      font-size: 1.1rem;
-      cursor: pointer;
-      transition: box-shadow .3s;
-    }
-    .btn-primary:hover,
-    form button:hover {
-      box-shadow: 0 0 20px #ff7e5f;
-    }
-
-    /* 6. Original grid & card styles */
-    .about-content {
-      text-align: center;
-      font-size: 1.2rem;
-      max-width: 800px;
-      margin: 0 auto;
-      color: #ccc;
-    }
-    .services-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      gap: 2rem;
-    }
-    .service-card {
-      background: #292929;
-      border-radius: 15px;
+    form {
+      background-color: #fff;
       padding: 2rem;
-      text-align: center;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      border: 1px solid #333;
-      transition: transform 0.3s;
-    }
-    .service-card:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 15px 30px rgba(0,0,0,0.5);
-    }
-    .service-card h3 {
-      margin-bottom: 1rem;
-      color: #fff;
-    }
-    .service-card p {
-      color: #aaa;
-    }
-    .gallery {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-    }
-    .gallery-item {
-      border-radius: 15px;
-      overflow: hidden;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-      position: relative;
-    }
-    .gallery-item img {
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.05);
+      max-width: 420px;
       width: 100%;
-      height: 200px;
-      object-fit: cover;
-      transition: transform 0.3s ease;
     }
-    .gallery-item:hover img {
-      transform: scale(1.05);
+
+    form h2 {
+      font-size: 1.4rem;
+      margin-bottom: 1.5rem;
+      color: #21244c;
     }
-    .gallery-overlay {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      padding: 1rem;
-      background: linear-gradient(to top, rgba(0,0,0,0.7), transparent);
-      color: white;
+
+    form label {
+      font-weight: 600;
+      display: block;
+      margin: 0.75rem 0 0.3rem;
+      color: #333;
+    }
+
+    form input,
+    form textarea {
+      width: 100%;
+      padding: 0.75rem;
+      border: 1px solid #ccd2e0;
+      border-radius: 6px;
+      margin-bottom: 0.8rem;
+      font-size: 1rem;
+    }
+
+    form textarea {
+      resize: vertical;
+      height: 100px;
+    }
+
+    form button {
+      width: 100%;
+      background-color: #21244c;
+      color: #fff;
+      padding: 0.9rem;
+      font-size: 1rem;
       font-weight: bold;
-      opacity: 0;
-      transition: opacity 0.3s ease;
+      border: none;
+      border-radius: 6px;
+      margin-top: 1rem;
+      cursor: pointer;
+      transition: background 0.2s ease;
     }
-    .gallery-item:hover .gallery-overlay {
-      opacity: 1;
+
+    form button:hover {
+      background-color: #1a1d3f;
     }
+
+    .confirmation {
+      text-align: center;
+      background: #e8ffe5;
+      border: 1px solid #94d89d;
+      padding: 2rem;
+      border-radius: 10px;
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #2b6d2b;
+      margin-top: 2rem;
+      display: none;
+    }
+
     footer {
       text-align: center;
-      padding: 2rem;
-      background: #111;
-      color: #aaa;
-      margin-top: 4rem;
+      padding: 2rem 1rem;
+      font-size: 0.9rem;
+      color: #888;
     }
-    .contact-container {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 3rem;
-      align-items: start;
-    }
-    @media (max-width: 768px) {
-      .contact-container {
-        grid-template-columns: 1fr;
+
+    @media (max-width: 500px) {
+      header h1 {
+        font-size: 2rem;
       }
-    }
-    .contact-info {
-      background: #292929;
-      padding: 2rem;
-      border-radius: 15px;
-      color: #ddd;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-      text-align: center;
-    }
-    .contact-info h3 {
-      margin-bottom: 1.5rem;
-      font-size: 1.8rem;
-    }
-    .contact-item {
-      font-size: 1.1rem;
-      margin-bottom: 1.2rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 0.8rem;
-      color: #bbb;
-    }
-    .contact-item i {
-      font-size: 1.4rem;
-      width: 30px;
-      color: #fff;
-    }
-    form {
-      background: #292929;
-      padding: 2rem;
-      border-radius: 15px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.4);
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 1rem;
-      border-radius: 10px;
-      border: none;
-      margin-bottom: 1.5rem;
-      font-size: 1rem;
-      font-family: inherit;
-      background: #1e1e1e;
-      color: #eee;
-      resize: vertical;
-    }
-    form input::placeholder, form textarea::placeholder {
-      color: #999;
-    }
-    form textarea {
-      min-height: 120px;
-    }
-    form button {
-      border: none;
-      padding: 1rem 2rem;
-      font-size: 1.1rem;
-      font-weight: 600;
-      border-radius: 25px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-      width: 100%;
+
+      form {
+        padding: 1.5rem 1rem;
+      }
     }
   </style>
 </head>
-
 <body>
+
   <header>
-    <h1>Brighter Arizona LED</h1>
-    <p>Professional Permanent & Holiday Lighting Solutions</p>
+    <h1>Get Your Custom Quote</h1>
+    <p>Professional LED Lighting Installations in Arizona</p>
   </header>
 
-  <nav>
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#services">Services</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#reviews">Reviews</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
-
   <main>
-    <section id="home">
-      <h2>Welcome to Brighter Arizona LED</h2>
-      <div class="about-content">
-        <p>Transform your Arizona home with our premium LED lighting solutions. We specialize in permanent outdoor lighting systems and stunning holiday displays that enhance your property's beauty while providing energy-efficient illumination year-round.</p>
-      </div>
-    </section>
+    <form id="quote-form">
+      <h2>Request a Free Quote</h2>
 
-    <section id="services">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <h3><i class="fas fa-home"></i> Permanent LED Installations</h3>
-          <p>Custom permanent LED lighting systems designed specifically for Arizona-style homes. Energy-efficient, weather-resistant, and built to last.</p>
-        </div>
-        <div class="service-card">
-          <h3><i class="fas fa-star"></i> Holiday Lighting</h3>
-          <p>Spectacular Christmas and holiday light installations that make your home the centerpiece of the neighborhood during the festive season.</p>
-        </div>
-        <div class="service-card">
-          <h3><i class="fas fa-tools"></i> Professional Installation</h3>
-          <p>Expert installation by certified technicians ensuring safety, reliability, and stunning results that exceed your expectations.</p>
-        </div>
-        <div class="service-card">
-          <h3><i class="fas fa-headset"></i> Ongoing Support</h3>
-          <p>Comprehensive maintenance and support services to keep your lighting system operating at peak performance year after year.</p>
-        </div>
-      </div>
-    </section>
+      <label for="name">Full Name</label>
+      <input type="text" id="name" name="name" required />
 
-    <section id="gallery">
-      <h2>Our Work</h2>
-      <div class="gallery">
-        <div class="gallery-item">
-          <img src="images/image1.png" alt="Warm white LED install" />
-          <div class="gallery-overlay">Permanent Warm White Installation</div>
-        </div>
-        <div class="gallery-item">
-          <img src="images/image2.png" alt="Blue and red LED lighting" />
-          <div class="gallery-overlay">Blue & Red Lighting Setup</div>
-        </div>
-        <div class="gallery-item">
-          <img src="images/image3.png" alt="Holiday lighting with red and white LEDs" />
-          <div class="gallery-overlay">Holiday Red & White Lights</div>
-        </div>
-      </div>
-    </section>
+      <label for="email">Email Address</label>
+      <input type="email" id="email" name="email" required />
 
-    <section id="about">
-      <h2>About Brighter Arizona LED</h2>
-      <div class="about-content">
-        <p>Based in the heart of Arizona, Brighter Arizona LED is your premier destination for professional lighting solutions. We understand the unique architecture and climate challenges of the Southwest, and we've tailored our services to perfectly complement Arizona's distinctive home styles.</p><br/>
-        <p>Our team of certified lighting professionals brings years of experience and a commitment to excellence that ensures every project exceeds expectations. From permanent LED installations that enhance your home's natural beauty to spectacular holiday displays that create magical memories, we're here to illuminate your world.</p>
-      </div>
-    </section>
+      <label for="phone">Phone Number</label>
+      <input type="tel" id="phone" name="phone" required />
 
-    <section id="contact">
-      <h2>Contact Us</h2>
-      <div class="contact-container">
-        <div class="contact-info">
-          <h3>Get in Touch</h3>
-          <div class="contact-item"><i class="fas fa-phone"></i> (480) 389-6002</div>
-          <div class="contact-item"><i class="fas fa-envelope"></i> brighterarizonaled@gmail.com</div>
-          <div class="contact-item"><i class="fas fa-map-marker-alt"></i> Phoenix, Arizona</div>
-          <div class="contact-item"><i class="fas fa-clock"></i> Mon-Fri: 8AM - 6PM</div>
-        </div>
-        <form>
-          <input type="text" name="name" placeholder="Your Name *" required>
-          <input type="email" name="email" placeholder="Your Email *" required>
-          <input type="tel" name="phone" placeholder="Phone Number">
-          <textarea name="message" placeholder="Tell us about your project *" required></textarea>
-          <button type="submit">Send Message</button>
-        </form>
+      <label for="details">Project Details</label>
+      <textarea id="details" name="details" placeholder="Tell us about your project..." required></textarea>
+
+      <button type="submit">Get My Quote</button>
+
+      <div class="confirmation" id="confirmation">
+        ✅ Thank you! A member of our team will reach out shortly.
       </div>
-    </section>
+    </form>
   </main>
 
   <footer>
-    <p>&copy; 2025 Brighter Arizona LED. All rights reserved.</p>
+    &copy; 2025 Brighter Arizona LED. All rights reserved.
   </footer>
+
+  <script>
+    const form = document.getElementById("quote-form");
+    const confirmation = document.getElementById("confirmation");
+
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+
+      // You can send form data to an endpoint here using fetch or email service
+      form.reset();
+      confirmation.style.display = "block";
+    });
+  </script>
 </body>
 </html>
