--- a/index.html
+++ b/index.html
@@ -165,15 +165,15 @@
       <h2>Our Work</h2>
       <div class="gallery">
         <div>
-          <img src="our-work1.jpg" alt="Finished home LED lighting" />
+          <img src="image/image1.png" alt="Finished home LED lighting" />
           <div class="caption">Home upgrade - warm white perimeter LED</div>
         </div>
         <div>
-          <img src="our-work2.jpg" alt="Patio lighting project" />
+          <img src="image/image2.png" alt="Patio lighting project" />
           <div class="caption">Patio & backyard color accent install</div>
         </div>
         <div>
-          <img src="our-work3.jpg" alt="Seasonal lighting" />
+          <img src="image/image3.png" alt="Seasonal lighting" />
           <div class="caption">Seasonal color setup for the holidays</div>
         </div>
         <!-- Add or swap image blocks for your own photos -->
