--- a/index.html
+++ b/index.html
@@ -4,98 +4,106 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Brighter Arizona LED - Professional Lighting Solutions</title>
-  <!-- Google Font: Poppins for crisp branding -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+  <!-- Montserrat for Bold Look -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;600;500;400&display=swap" rel="stylesheet">
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <style>
     :root {
-      --blue-dark: #111726;
+      --blue-dark: #131723;
       --blue-mid: #232941;
       --yellow: #ffd839;
       --text-light: #fff;
-      --card-bg: #181E2D;
-      --gray: #c7cbe5;
-      --service-bg: #21263a;
+      --text-muted: #c9cad3;
+      --card-bg: #1b1f2e;
+      --gray-dark: #191c28;
     }
+
     html, body {
       background: var(--blue-dark);
       color: var(--text-light);
-      font-family: 'Poppins', Arial, sans-serif;
-      margin: 0; padding: 0;
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
     /* NAV BAR */
     nav {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      background: var(--blue-mid);
-      padding: 1.1rem 2.5vw;
+      background: var(--blue-dark);
+      padding: 1.2rem 2vw 1.2rem 2vw;
       position: sticky;
       top: 0;
-      z-index: 10;
+      z-index: 20;
+      border-bottom: 1px solid #20243b;
     }
     .nav-logo {
       display: flex;
       align-items: center;
       font-weight: 700;
-      font-size: 1.35rem;
+      font-size: 1.22rem;
       color: var(--yellow);
       letter-spacing: 1px;
-      gap: 0.5rem;
+      gap: 0.55rem;
     }
     .nav-links {
       display: flex;
-      gap: 2.5vw;
-      font-size: 1.08rem;
+      gap: 2.2vw;
+      font-size: 1.07rem;
       align-items: center;
     }
     .nav-links a {
       color: #fff;
       text-decoration: none;
       font-weight: 600;
-      padding: 0.4em 0.9em;
-      border-radius: 7px;
+      padding: 0.38em 0.85em;
+      border-radius: 8px;
       transition: background 0.2s;
     }
     .nav-links .active,
     .nav-links a:hover {
       color: var(--yellow);
-      background: #26305a;
+      background: #22273b;
     }
     .nav-btn {
       background: var(--yellow);
       color: var(--blue-dark);
       border: none;
-      border-radius: 10px;
+      border-radius: 9px;
       font-weight: 700;
-      font-size: 1.1rem;
-      padding: 0.64em 1.3em;
+      font-size: 1.08rem;
+      padding: 0.7em 1.35em;
       cursor: pointer;
       margin-left: 1vw;
-      transition: background 0.15s;
+      transition: background 0.14s;
     }
     .nav-btn:hover {
-      background: #ffe56d;
+      background: #ffe46e;
     }
 
     /* HERO SECTION */
     .hero {
-      min-height: 48vh;
+      min-height: 49vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 3rem 1.2rem 1.6rem 1.2rem;
+      padding: 3.6rem 1.2rem 2.6rem 1.2rem;
       background: var(--blue-dark);
       text-align: center;
     }
     .hero-title {
-      font-size: 2.7rem;
-      line-height: 1.14;
+      font-size: 3rem;
+      line-height: 1.13;
       font-weight: 700;
       color: #fff;
-      margin-bottom: 0.3em;
+      margin-bottom: 0.25em;
       letter-spacing: 1.5px;
     }
     .hero-title .highlight {
@@ -104,63 +112,54 @@
       margin-top: 0.04em;
     }
     .hero-sub {
-      font-size: 1.16rem;
-      color: var(--gray);
-      margin-bottom: 2.3em;
+      font-size: 1.24rem;
+      color: #cecece;
+      margin-bottom: 2.2em;
       font-weight: 400;
+      max-width: 625px;
+      margin-left: auto;
+      margin-right: auto;
     }
     .hero-actions {
       display: flex;
       gap: 1rem;
       justify-content: center;
     }
-    .hero-actions button,
-    .hero-actions input[type="text"] {
+    .hero-actions button {
       border-radius: 8px;
       border: none;
-      font-size: 1.05rem;
-      font-family: inherit;
-      height: 2.85rem;
-      outline: none;
-    }
-    .hero-actions button {
       background: var(--yellow);
       color: var(--blue-dark);
+      padding: 0.95em 2.1em;
+      font-size: 1.06rem;
+      font-family: inherit;
       font-weight: 600;
-      padding: 0 1.7rem;
       cursor: pointer;
-      transition: background 0.15s;
+      transition: background 0.14s;
+      letter-spacing: 0.5px;
+      box-shadow: 0 2px 12px rgba(10,10,10,0.08);
     }
     .hero-actions button:hover {
-      background: #ffe56d;
-    }
-    .hero-actions input[type="text"] {
-      background: #fff;
-      color: #181e2d;
-      padding: 0 1rem;
-      width: 210px;
-      max-width: 34vw;
-      border: none;
-      font-weight: 600;
+      background: #ffe46e;
     }
 
-    /* SECTION: SERVICES */
+    /* SERVICE SECTION */
     .services-section {
       background: #232941;
-      padding: 3.8em 1.3em 2.5em;
+      padding: 3em 1.1em 2.5em;
       text-align: center;
     }
     .section-title {
       color: var(--yellow);
-      font-size: 2rem;
+      font-size: 2.17rem;
       font-weight: 700;
       margin-bottom: 0.2em;
     }
     .section-sub {
-      color: #e8e9f1;
+      color: #d6d7e1;
       font-weight: 400;
-      font-size: 1.15rem;
-      margin-bottom: 2em;
+      font-size: 1.14rem;
+      margin-bottom: 2.15em;
     }
     .services-cards {
       display: flex;
@@ -168,55 +167,55 @@
       justify-content: center;
       flex-wrap: wrap;
       margin: 0 auto;
-      max-width: 1100px;
+      max-width: 1200px;
       padding: 0;
     }
     .service-card {
       background: var(--card-bg);
-      border-radius: 15px;
-      padding: 2.1em 1.5em 1.5em 1.5em;
-      box-shadow: 0 3px 18px rgba(10,15,30,0.08);
-      width: 310px;
+      border-radius: 17px;
+      padding: 2.2em 1.7em 1.4em;
+      box-shadow: 0 3px 20px rgba(10,15,30,0.10);
+      width: 327px;
       min-width: 230px;
       color: #fff;
       margin-bottom: 1.2em;
       flex: 1;
-      min-height: 225px;
+      min-height: 220px;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .service-card .icon {
-      font-size: 2.2rem;
+      font-size: 2.35rem;
       color: var(--yellow);
-      margin-bottom: 0.7em;
+      margin-bottom: 0.8em;
     }
     .service-card h3 {
-      font-size: 1.21rem;
+      font-size: 1.16rem;
       font-weight: 700;
       margin-bottom: 0.34em;
     }
     .service-card p {
-      font-size: 1.05rem;
-      color: #b3b8d0;
-      margin-top: 0.3em;
+      font-size: 1.02rem;
+      color: #cccccc;
+      margin-top: 0.23em;
     }
 
     /* WHY CHOOSE US */
     .why-section {
       background: var(--blue-dark);
-      padding: 3.5em 1.3em 2.1em;
+      padding: 3.6em 1.1em 2.05em;
       text-align: center;
     }
     .why-title {
       color: var(--yellow);
-      font-size: 2rem;
+      font-size: 2.08rem;
       font-weight: 700;
       margin-bottom: 0.11em;
     }
     .why-sub {
-      color: #e8e9f1;
-      font-size: 1.11rem;
+      color: #c8c8cd;
+      font-size: 1.12rem;
       margin-bottom: 2em;
       font-weight: 400;
     }
@@ -226,17 +225,17 @@
       justify-content: center;
       gap: 2vw;
       margin: 0 auto;
-      max-width: 1100px;
+      max-width: 1200px;
     }
     .why-card {
       background: var(--card-bg);
       border-radius: 13px;
-      box-shadow: 0 2.5px 12px rgba(20,25,49,0.09);
+      box-shadow: 0 2.5px 14px rgba(20,26,49,0.06);
       flex: 1;
       min-width: 235px;
-      max-width: 300px;
+      max-width: 345px;
       margin-bottom: 1.2em;
-      padding: 1.55em 1.1em 1.1em;
+      padding: 1.55em 1.2em 1.1em;
       text-align: left;
       display: flex;
       flex-direction: row;
@@ -244,51 +243,123 @@
       gap: 1em;
     }
     .why-card .icon {
-      font-size: 1.85rem;
+      font-size: 2.05rem;
       color: var(--yellow);
       flex-shrink: 0;
-      margin-top: 0.1em;
+      margin-top: 0.08em;
     }
     .why-card .why-text {
       flex: 1;
     }
     .why-card h4 {
-      font-size: 1.09rem;
+      font-size: 1.11rem;
       margin: 0 0 0.22em 0;
       font-weight: 700;
       color: #fff;
     }
     .why-card p {
-      color: #b3b8d0;
-      font-size: 1.03rem;
+      color: #c7cdda;
+      font-size: 1.01rem;
       margin: 0;
     }
-
+    /* CONTACT FORM */
+    .contact-section {
+      background: var(--gray-dark);
+      padding: 3em 1em 2em 1em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 350px;
+    }
+    .contact-title {
+      color: var(--yellow);
+      font-size: 2rem;
+      font-weight: 700;
+      margin-bottom: 0.4em;
+      text-align: center;
+    }
+    .contact-wrap {
+      background: var(--card-bg);
+      padding: 2.2em 2em 1.9em 2em;
+      border-radius: 15px;
+      width: 100%;
+      max-width: 430px;
+      box-shadow: 0 6px 25px rgba(0,0,0,0.13);
+      text-align: left;
+    }
+    .contact-item {
+      font-size: 1.10rem;
+      margin-bottom: 1.2rem;
+      display: flex;
+      align-items: center;
+      color: #cecece;
+      gap: 0.8rem;
+    }
+    .contact-item i {
+      font-size: 1.36rem;
+      width: 26px;
+      color: var(--yellow);
+    }
+    /* Simple contact form: */
+    .contact-form input, .contact-form textarea {
+      width: 100%;
+      padding: 1em;
+      border-radius: 9px;
+      border: none;
+      margin-bottom: 1.3rem;
+      font-size: 1rem;
+      font-family: inherit;
+      background: #232538;
+      color: #fff;
+      resize: vertical;
+    }
+    .contact-form input::placeholder, .contact-form textarea::placeholder {
+      color: #a5adc2;
+    }
+    .contact-form textarea {
+      min-height: 110px;
+    }
+    .contact-form button {
+      background: var(--yellow);
+      color: var(--blue-dark);
+      border: none;
+      border-radius: 9px;
+      font-size: 1.07rem;
+      font-weight: 700;
+      padding: 1em 0;
+      width: 100%;
+      cursor: pointer;
+      letter-spacing: 1.2px;
+      box-shadow: 0 1.5px 7px rgba(10,10,10,0.11);
+      transition: background 0.14s;
+    }
+    .contact-form button:hover {
+      background: #ffe46e;
+    }
     /* FOOTER */
     footer {
       text-align: center;
-      padding: 2.2em 1em 2.7em 1em;
-      background: var(--blue-mid);
-      color: #ccc;
-      font-size: 1.04rem;
-      letter-spacing: 1.2px;
-      font-family: 'Poppins', Arial, sans-serif;
-      margin-top: 2.5em;
+      padding: 2.1em 1em 2.1em 1em;
+      background: var(--blue-dark);
+      color: #cecece;
+      font-size: 1.07rem;
+      letter-spacing: 1.05px;
+      font-family: 'Montserrat', Arial, sans-serif;
+      margin-top: 0.2em;
     }
-
-    /* RESPONSIVE */
-    @media (max-width: 1100px){
+    @media (max-width: 1200px){
       .services-cards, .why-grid { flex-direction: column; align-items: center; gap: 1.5em;}
-      .service-card, .why-card { max-width: 95vw; }
+      .service-card, .why-card { max-width: 97vw; }
     }
     @media (max-width: 700px){
-      .hero-title { font-size: 2rem; }
-      .nav-logo { font-size: 1.11rem;}
+      .hero-title { font-size: 2.06rem; }
+      .nav-logo { font-size: 1.02rem;}
+      .contact-wrap { max-width:96vw;}
     }
     @media (max-width: 450px){
-      .hero-title { font-size: 1.3rem; }
-      .section-title, .why-title { font-size: 1.25rem;}
-      .hero-actions { flex-direction: column; gap: 0.6em;}
+      .hero-title { font-size: 1.29rem; }
+      .section-title, .why-title, .contact-title { font-size: 1.14rem;}
     }
   </style>
 </head>
@@ -302,7 +373,7 @@
     <div class="nav-links">
       <a href="#" class="active">Home</a>
       <a href="#quote">Free Quote</a>
-      <button class="nav-btn">Get a Free Quote</button>
+      <button class="nav-btn" onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Get a Free Quote</button>
     </div>
   </nav>
 
@@ -316,8 +387,7 @@
       Premium, energy-efficient LED lighting solutions for residential and commercial spaces across Arizona.
     </div>
     <div class="hero-actions">
-      <button>Get a Free Consultation</button>
-      <input type="text" placeholder="" />
+      <button onclick="document.getElementById('contact').scrollIntoView({behavior: 'smooth'})">Get a Free Consultation</button>
     </div>
   </section>
 
@@ -329,17 +399,17 @@
     </div>
     <div class="services-cards">
       <div class="service-card">
-        <span class="icon"><i class="fas fa-home"></i></span>
+        <span class="icon"><i class="fa-solid fa-house-chimney"></i></span>
         <h3>Residential Lighting</h3>
         <p>Enhance your home’s beauty and efficiency with our custom lighting designs.</p>
       </div>
       <div class="service-card">
-        <span class="icon"><i class="fas fa-building"></i></span>
+        <span class="icon"><i class="fa-solid fa-building"></i></span>
         <h3>Commercial Lighting</h3>
         <p>Brighten your business space, improve productivity, and save on energy costs.</p>
       </div>
       <div class="service-card">
-        <span class="icon"><i class="fas fa-screwdriver-wrench"></i></span>
+        <span class="icon"><i class="fa-solid fa-screwdriver-wrench"></i></span>
         <h3>Custom Installations</h3>
         <p>From landscape to architectural lighting, we bring your unique vision to life.</p>
       </div>
@@ -352,21 +422,21 @@
     <div class="why-sub">The Brighter Arizona difference.</div>
     <div class="why-grid">
       <div class="why-card">
-        <span class="icon"><i class="fas fa-leaf"></i></span>
+        <span class="icon"><i class="fa-solid fa-leaf"></i></span>
         <div class="why-text">
           <h4>Energy Savings</h4>
           <p>Our LED solutions can cut your lighting energy consumption by up to 80%.</p>
         </div>
       </div>
       <div class="why-card">
-        <span class="icon"><i class="fas fa-shield-halved"></i></span>
+        <span class="icon"><i class="fa-solid fa-shield-halved"></i></span>
         <div class="why-text">
           <h4>Quality & Durability</h4>
           <p>We use only top-tier, long-lasting products backed by robust warranties.</p>
         </div>
       </div>
       <div class="why-card">
-        <span class="icon"><i class="fas fa-bolt"></i></span>
+        <span class="icon"><i class="fa-solid fa-bolt-lightning"></i></span>
         <div class="why-text">
           <h4>Expert Installation</h4>
           <p>Our certified electricians ensure a safe, clean, and perfect installation every time.</p>
@@ -375,8 +445,26 @@
     </div>
   </section>
 
+  <!-- CONTACT SECTION -->
+  <section id="contact" class="contact-section">
+    <div class="contact-title">Contact Us / Free Quote</div>
+    <div class="contact-wrap">
+      <div class="contact-item"><i class="fa-solid fa-phone"></i> (480) 389-6002</div>
+      <div class="contact-item"><i class="fa-solid fa-envelope"></i> brighterarizonaled@gmail.com</div>
+      <div class="contact-item"><i class="fa-solid fa-location-dot"></i> Phoenix, Arizona</div>
+      <form class="contact-form" autocomplete="off" onsubmit="event.preventDefault(); alert('Thank you! We have received your message and will get back to you soon.'); this.reset();">
+        <input type="text" name="name" placeholder="Your Name *" required>
+        <input type="email" name="email" placeholder="Your Email *" required>
+        <input type="tel" name="phone" placeholder="Phone Number">
+        <textarea name="message" placeholder="Tell us about your project *" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
   <footer>
     &copy; 2025 Brighter Arizona LED. All rights reserved.
   </footer>
 </body>
 </html>
+
