--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <span class="icon"><i class="fa-solid fa-leaf"></i></span>
         <div class="why-text">
           <h4>Energy Savings</h4>
-          <p>Our LED solutions can cut your lighting energy consumption by up to 80%.</p>
+          <p>Our LED solutions can cut your lighting energy consumption.</p>
         </div>
       </div>
       <div class="why-card">
